# md2cv

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/skills/tailor-cv/: SKILL.md
.github/skills/tailor-cv/references/: cv-markdown-format.md  tailoring-guidelines.md
examples/: example_cv.md
src/md2cv/: __init__.py  cli.py  models.py  parser.py  pdf.py  renderer.py  themes.py
src/md2cv/templates/modern/: template.html  theme.toml
src/md2cv/templates/professional/: template.html  theme.toml
tests/: conftest.py  test_cli.py  test_parser.py  test_pdf.py  test_renderer.py
tests/fixtures/: sample_long.md  sample_minimal.md  sample_short.md
