[project]
name = "md2cv"
version = "0.1.0"
description = "Markdown to CV/resume converter with auto-fit PDF generation"
readme = "README.md"
authors = [
    { name = "Zhuoyuan Liu", email = "zhuoyuan-liu@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "mistune>=3.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
]

[project.scripts]
md2cv = "md2cv.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
